Added first type/babel script block

--- a/example.html
+++ b/example.html
@@ -9,7 +9,11 @@
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
   </head>
   <body>
-    <script>
+    <script type="text/babel">
+      ReactDOM.render(
+	      <h1>Sherlock Holmes</h1>,
+	  document.body
+      );
     </script>
   </body>
 </html>
