--- a/example.html
+++ b/example.html
@@ -7,6 +7,17 @@
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+    <style>
+      #container {
+	  padding: 50px;
+	  background-color: #EEE;
+      }
+      #container h1 {
+	  font-size: 144px;
+	  font-family: sans-serif;
+	  color: #0080A8;
+      }
+    </style>
   </head>
   <body>
 
