Complete example from ch3

--- a/ch3/example.html
+++ b/ch3/example.html
@@ -14,19 +14,30 @@
     <script type="text/babel">
       class HelloWorld extends React.Component {
 	  render() {
-	      return <p>Hello sailor!</p>
+	      return <p>Hello, {this.props.greetTarget}!</p>
 	  }
       }
-      
+
+      class Buttonify extends React.Component {
+	  render() {
+	      return(
+		      <div>
+		      <button
+		  type={this.props.behavior}>{this.props.children}</button>
+		      </div>
+	      );
+	  }
+      }      
       ReactDOM.render(
 	      <div>
-	      <HelloWorld/>
-	      <HelloWorld/>
-	      <HelloWorld/>
-	      <HelloWorld/>
-	      <HelloWorld/>
-	      <HelloWorld/>
-	      <HelloWorld/>
+	      <HelloWorld greetTarget="sailor"/>
+	      <HelloWorld greetTarget="soldier"/>
+	      <HelloWorld greetTarget="big boy"/>
+	      <HelloWorld greetTarget="flyboy"/>
+	      <HelloWorld greetTarget="handsome"/>
+	      <div>
+	      <Buttonify behavior="submit">SEND DATA</Buttonify>
+	      </div>
 	      </div>,
 	  document.querySelector("#container")
       );
