--- a/ch4/example.html
+++ b/ch4/example.html
@@ -8,18 +8,8 @@
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
     <style>
       #container {
-	  padding: 50px;
-	  background-color: #FFF;
-      }
-      .letter {
-	  padding: 10px;
-	  margin: 10px;
-	  background-color: #FFDE00;
-	  color: #333;
-	  display: inline-block;
-	  font-family: monospace;
-	  font-size: 32px;
-	  text-align: center;
+          padding: 50px;
+          background-color: #FFF;
       }
     </style>
   </head>
@@ -30,24 +20,34 @@
       var destination = document.querySelector("#container");
 
       class Letter extends React.Component {
-	  render() {
-	      return(
-		      <div className="letter">
-		      {this.props.children}
-		  </div>
-	      );
-	  }
+          render() {
+              var letterStyle = {
+                  padding: 10,
+                  margin: 10,
+                  backgroundColor: "#FFDE00",
+                  color: "#333",
+                  display: "inline-block",
+                  fontFamily: "monospace",
+                  fontSize: 32,
+                  textAlign: "center"
+              };
+              return (
+                  <div style={letterStyle}>
+                      {this.props.children}
+                  </div>
+              );
+          }
       }
 
       ReactDOM.render(
-	      <div>
-	      <Letter>A</Letter>
-	      <Letter>E</Letter>
-	      <Letter>I</Letter>
-	      <Letter>O</Letter>
-	      <Letter>U</Letter>
-	      </div>,
-	  destination
+              <div>
+              <Letter>A</Letter>
+              <Letter>E</Letter>
+              <Letter>I</Letter>
+              <Letter>O</Letter>
+              <Letter>U</Letter>
+              </div>,
+          destination
       );
     </script>
   </body>
