--- a/ch4/example.html
+++ b/ch4/example.html
@@ -24,7 +24,7 @@
               var letterStyle = {
                   padding: 10,
                   margin: 10,
-                  backgroundColor: "#FFDE00",
+		  backgroundColor: this.props.bgcolor,
                   color: "#333",
                   display: "inline-block",
                   fontFamily: "monospace",
@@ -32,7 +32,7 @@
                   textAlign: "center"
               };
               return (
-                  <div style={letterStyle}>
+                      <div style={letterStyle}>
                       {this.props.children}
                   </div>
               );
@@ -41,11 +41,11 @@
 
       ReactDOM.render(
               <div>
-              <Letter>A</Letter>
-              <Letter>E</Letter>
-              <Letter>I</Letter>
-              <Letter>O</Letter>
-              <Letter>U</Letter>
+	      <Letter bgcolor="#58B3FF">A</Letter>
+	      <Letter bgcolor="#FF605F">E</Letter>
+	      <Letter bgcolor="#FFD52E">I</Letter>
+	      <Letter bgcolor="#49DD8E">O</Letter>
+	      <Letter bgcolor="#AE99FF">U</Letter>
               </div>,
           destination
       );
