--- a/ch6/example.html
+++ b/ch6/example.html
@@ -36,9 +36,7 @@
       class Label extends React.Component {
 	  render() {
 	      return (
-		      <Display color={this.props.color}
-		  num={this.props.num}
-		  size={this.props.size}/>
+		      <Display {...this.props} />
 	      );
 	  }
       }
@@ -47,10 +45,7 @@
 	  render() {
 	      return (
 		      <div>
-		      <Label
-		  color={this.props.color}
-		  num={this.props.num}
-		  size={this.props.size}/>
+		      <Label {...this.props} />
 		      </div>
 	      );
 	  }
